@@ -44,7 +44,12 @@ Revision history for Perl module Getopt::Lucid
     - revamp argument spec to new, simpler format
     - validation on lists (validate each value)
     - validation on keypairs (simple validation for keys/values as a whole)
-      signify?)
     - "magic" mode as the default: take barewords in spec and handle any form
       that appears to match it
-      - add "strict" argument to use for less magic on names/aliases
+    - add "strict" argument to use for less magic on names/aliases
+    - Negation (only for switch/counter/parameter bare/longform): 
+      sets to zero/undef
+    - Negation with = (for list/keypair bare/longform):  
+      removes matching element/key
+    - Negation without = (for list/keypair bare/longform): 
+      blanks entire list/hash
